# google-docs-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json  server.py
src/google_docs_mcp_server/: __init__.py  server.py
